# ExcelTableDifference

./: pyproject.toml
src/excelTableDifference/: ExcelTableDifference.py
